# fredmontet

./: .gitignore  CLAUDE.md  Makefile  README.md  _publish.yml  _quarto.yml  _redirects  index.qmd  pyproject.toml  stories.qmd  theme.scss
.claude/: settings.local.json
.github/: copilot-instructions.md
scripts/: fetch_substack_note.py
stories/data-story-1/: index.qmd  references.bib
stories/photographic-story-1/: index.qmd  references.bib
stories/story-1/: index.qmd
stories/thought-1/: index.qmd  references.bib
stories/thought-2/: index.qmd
