[project]
name = "fredmontet"
version = "0.1.0"
description = "Personal website and portfolio"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "pandas>=3.0.0",
    "numpy>=2.0.0",
    "jupyter>=1.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fredmontet"]

